Adicionando as urls das campanhas no codigo

--- a/index.html
+++ b/index.html
@@ -249,16 +249,16 @@
                 <h2 class="h2-1 padding-top">ESCOLHA O KIT IDEAL PARA VOCÊ</h2>
                 <h2>APROVEITE A OFERTA RELÂMPAGO!</h2>
                 <div class="produtos padding-top-2">
-                    <a href="#">
+                    <a href="https://app.monetizze.com.br/r/BES1643867">
                         <img src="imgs/12-frascos.png" alt="" srcset="">
                     </a>
-                    <a href="#">
+                    <a href="https://app.monetizze.com.br/r/BZC1643866">
                         <img src="imgs/5-frascos.png" alt="" srcset="">
                     </a>
-                    <a href="#">
+                    <a href="https://app.monetizze.com.br/r/BYK1643864">
                         <img src="imgs/3-frascos.png" alt="" srcset="">
                     </a>
-                    <a href="#">
+                    <a href="https://app.monetizze.com.br/r/BMB1643863">
                         <img src="imgs/1-frasco.png" alt="" srcset="">
                     </a>
                 </div>
