Removendo link de checkout que não funciona

--- a/index.html
+++ b/index.html
@@ -249,9 +249,9 @@
                 <h2 class="h2-1 padding-top">ESCOLHA O KIT IDEAL PARA VOCÊ</h2>
                 <h2>APROVEITE A OFERTA RELÂMPAGO!</h2>
                 <div class="produtos padding-top-2">
-                    <a href="https://app.monetizze.com.br/r/BES1643867">
+                    <!-- <a href="https://app.monetizze.com.br/r/BES1643867">
                         <img src="imgs/12-frascos.png" alt="" srcset="">
-                    </a>
+                    </a> -->
                     <a href="https://app.monetizze.com.br/r/BZC1643866">
                         <img src="imgs/5-frascos.png" alt="" srcset="">
                     </a>
