Retirando o url fake

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <section id="first">
             <img id="first-bg" src="imgs/background.png" alt="" srcset="">
            <header id="logo-container">
-            <img onload="set_path_index()" src="imgs/logo.png" alt="" srcset="">
+            <img src="imgs/logo.png" alt="" srcset="">
            </header>
            <div id="itens-sessao-1">
                 <div class="titulo padding-left padding-top">
