Adicionando background em jpg

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
     <main onload="set_path_index()">
         <section id="first">
-            <img id="first-bg" src="imgs/background.png" alt="" srcset="">
+            <img id="first-bg" src="imgs/jpg/background.jpg" alt="" srcset="">
            <header id="logo-container">
             <img src="imgs/logo.png" alt="" srcset="">
            </header>
