Adicionando mais imagens jpg

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                 </div>
                  
                  <div class="imagem padding-left padding-top">
-                    <img class="imagem-menor" src="imgs/produto-medida.png" alt="" srcset="">
+                    <img class="imagem-menor" src="imgs/jpg/produto-medida.jpg" alt="" srcset="">
                  </div>
                  
             </div>
@@ -154,7 +154,7 @@
                     <img class="selos" src="imgs/selos-black.png" alt="" srcset="">
                 </div>
                 <div class="imagem padding-right">
-                    <img src="imgs/doutores.png" alt="" srcset="">
+                    <img src="imgs/jpg/doutores.jpg" alt="" srcset="">
                 </div>
             </div>
             <div class="sessao-black">
@@ -209,7 +209,7 @@
                         </p>
                     </div>
                     <div id="slice3" class="padding-top-plus">
-                        <img src="imgs/exemp.png" alt="" srcset="">
+                        <img src="imgs/jpg/exemp.jpg" alt="" srcset="">
                     </div>
                     <div id="slice4">
                         <h2>EQUILÍBRIO HORMONAL</h2>
@@ -270,7 +270,7 @@
             <div id="itens-sessao-7">
                 <div class="double-grid item-flex">
                     <div class="double-div1 item-flex">
-                        <img src="imgs/garantia.png" alt="" srcset="">
+                        <img src="imgs/jpg/garantia.jpg" alt="" srcset="">
                     </div>
                     <div class="double-div2 item-flex">
                         <h2>SEU RISCO POR TENTAR</h2>
